# Velocitytree

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .velocitytree.example.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  FEATURE_ROADMAP.md  LICENSE  MILESTONE_3_PLAN.md  MILESTONE_4_COMPLETED.md  MILESTONE_4_PLAN.md  MILESTONE_5_PLAN.md  ProjectVision.md  README.md  RELEASE_NOTES_v2.0.0.md  TICKETS.md  demo_circular.html  demo_hierarchical.html  demo_learning.py  demo_server.py  demo_spring.html  demo_visualization.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_imports.py  test_web_interface.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
config/: default_config.yaml
docs/: CODE_ANALYSIS.md  COMPLEXITY_METRICS.md  DEPENDENCY_TRACKING.md  FAQ.md  FEATURE_RELATIONSHIPS.md  GIT_INTEGRATION.md  INTERACTIVE_WEB_VIEWER.md  MILESTONE_1_PLAN.md  MILESTONE_2_PLAN.md  MILESTONE_3_PLAN.md  PATTERN_DETECTION.md  PLUGIN_DEVELOPMENT.md  PLUGIN_HOOKS.md  PLUGIN_LIFECYCLE_HOOKS.md  PROGRESS_TRACKING.md  VISUALIZATION.md
docs/development/: ARCHITECTURE.md  CONTINUOUS_EVALUATION.md  DOCUMENTATION_SYSTEM.md  SECURITY_SCANNING.md  SMART_TEMPLATE_SELECTION.md
docs/features/: documentation_quality.md  incremental_documentation.md  learning_from_feedback.md
docs/guides/: CONVERSATIONAL_PLANNING.md  GIT_WORKFLOW.md
examples/: conditional_deployment.yaml  parallel_deployment.yaml
scripts/: setup.bat  setup.sh
test_flatten/: __init__.py  ai.py  cli.py  core.py  original_structure.txt  plugins.py  version.py
tests/: __init__.py  test_alert_system.py  test_analyze_command.py  test_analyzer_security_integration.py  test_background_monitor.py  test_claude_integration.py  test_code_analyzer.py  test_continuous_eval.py  test_conversation_engine.py  test_core.py  test_current_features.py  test_dependency_tracking.py  test_doc_quality.py  test_documentation.py  test_drift_detector.py  test_example_plugins.py  test_feature_relationships.py  test_git_cli.py  test_git_integration.py  test_git_manager.py  test_graph_planning_integration.py  test_incremental_docs.py  test_learning_integration.py  test_learning_system.py  test_metrics.py  test_pattern_detection.py  test_planning_session.py  test_plugin_discovery.py  test_plugin_hooks.py  test_plugin_lifecycle.py  test_plugin_system.py  test_predictive_completion.py  test_progress_tracking.py  test_realignment_engine.py  test_realtime_suggestions.py  test_refactoring_recommendations.py  test_security.py  test_smart_documentation.py  test_template_selector.py  test_visualization.py  (+10 more)
velocitytree/: __init__.py  cli.py  config.py  constants.py  conversation_engine.py  feature_graph.py  git_integration.py  git_manager.py  improved_onboarding.py  interactive_analysis.py  onboarding.py  planning_session.py  plugin_system.py  plugins.py  progress_tracking.py  realtime_suggestions.py  report_generator.py  utils.py  visualization.py  web.py  web_server.py  workflow_conditions.py  workflow_context.py  workflow_parallel.py  workflows.py
velocitytree/claude_integration/: __init__.py  cache.py  prompts.py  provider.py  streaming.py
velocitytree/code_analysis/: __init__.py  advanced_patterns.py  analyzer.py  metrics.py  models.py  patterns.py  security.py
velocitytree/code_analysis/language_adapters/: __init__.py  python_adapter.py
velocitytree/continuous_eval/: __init__.py  alert_system.py  drift_detector.py  monitor.py  realignment_suggestions.py
velocitytree/documentation/: __init__.py  generator.py  incremental.py  models.py  quality.py  template_selector.py  templates.py
velocitytree/ide_integration/: __init__.py
velocitytree/learning/: __init__.py  feedback_collector.py
velocitytree/monitoring/: __init__.py  alert_system.py  drift_detector.py  monitor.py  realignment_engine.py
velocitytree/plugins/: README.md  __init__.py  hello_world.py
velocitytree/plugins/custom_commands/: __init__.py  plugin.py  plugin.yaml
velocitytree/plugins/json_formatter/: __init__.py  plugin.py  plugin.yaml
velocitytree/plugins/lifecycle_demo/: __init__.py  plugin.py  plugin.yaml
velocitytree/plugins/output_validator/: __init__.py  plugin.py  plugin.yaml
velocitytree/refactoring/: __init__.py  refactor_engine.py
velocitytree/static/css/: style.css
velocitytree/static/js/: app.js
velocitytree/templates/: __init__.py  index.html  workflow_templates.py
velocitytree/workflow_memory/: __init__.py  conflict_detector.py  decision_tracker.py  memory_store.py  precedent_engine.py
